test/objects/Task__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due__c</fullName>
        <label>Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reminder__c</fullName>
        <label>Reminder</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Starred__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Starred</label>
        <type>Checkbox</type>
    </fields>
    <label>Task</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Taasky Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>